--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: generate token
         id: generate_token
-        uses: tibdex/github-app-token@v1
+        uses: conda-forge/github-app-token@e3ab451d57e120b956292a1fa1d21fe4ba171c36
         with:
           app_id: ${{ secrets.CF_CURATOR_APP_ID }}
           private_key: ${{ secrets.CF_CURATOR_PRIVATE_KEY }}
